--- a/manifest.json
+++ b/manifest.json
@@ -4,27 +4,27 @@
     "version": "1.0",
     "description": "A live soccer scorer extension using football-data.org API",
     "permissions": [
-        "storage",
-        "notifications",
-        "https://api.football-data.org/"
+      "storage",
+      "notifications",
+      "alarms"
     ],
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "images/icon-16.png",
-            "48": "images/icon-48.png",
-            "128": "images/icon-128.png"
-        }
-    },
     "background": {
-        "service_worker": "background.js"
+      "service_worker": "background.js"
     },
-    "icons": {
+    "action": {
+      "default_popup": "popup.html",
+      "default_icon": {
         "16": "images/icon-16.png",
         "48": "images/icon-48.png",
         "128": "images/icon-128.png"
+      }
+    },
+    "icons": {
+      "16": "images/icon-16.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
     },
     "chrome_url_overrides": {
-        "newtab": "main.html"
+      "newtab": "main.html"
     }
-}
+  }
